--- a/AGILA/Config/DefaultGame.ini
+++ b/AGILA/Config/DefaultGame.ini
@@ -5,3 +5,10 @@ ProjectID=3ADDA9F04F50798475F8A5A22A413D26
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Test
+IncludeDebugFiles=True
+IncludeAppLocalPrerequisites=False
+BlueprintNativizationMethod=Disabled
+
