--- a/AGILA/Config/DefaultEngine.ini
+++ b/AGILA/Config/DefaultEngine.ini
@@ -7,11 +7,25 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default.Minimal_Default
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default.Minimal_Default
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Blueprints/GameModeBP/GameMode_AGILA.GameMode_AGILA_C
+GlobalDefaultServerGameMode=None
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/AGILA")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/AGILA")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="AGILAGameModeBase")
+
+[/Script/Engine.RendererSettings]
+r.SupportPointLightWholeSceneShadows=True
 
