--- a/AGILA/AGILA.uproject
+++ b/AGILA/AGILA.uproject
@@ -14,6 +14,12 @@
 			]
 		}
 	],
+	"Plugins": [
+		{
+			"Name": "DatasmithGLTFImporter",
+			"Enabled": true
+		}
+	],
 	"TargetPlatforms": [
 		"WindowsNoEditor"
 	]
