--- a/AGILA/Config/DefaultInput.ini
+++ b/AGILA/Config/DefaultInput.ini
@@ -84,6 +84,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Grab",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Brakes",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
 +ActionMappings=(ActionName="Inventory",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=I)
++ActionMappings=(ActionName="Upgrade",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=U)
 +AxisMappings=(AxisName="MouseYaw",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="MousePitch",Scale=1.000000,Key=MouseY)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
