--- a/AGILA/AGILA.uproject
+++ b/AGILA/AGILA.uproject
@@ -18,6 +18,10 @@
 		{
 			"Name": "DatasmithGLTFImporter",
 			"Enabled": true
+		},
+		{
+			"Name": "ApexDestruction",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
